fixed double scrollbars on album index

--- a/app/assets/stylesheets/albums.scss
+++ b/app/assets/stylesheets/albums.scss
@@ -155,8 +155,6 @@ body {
 
 .album-idx-wrapper {
   height: 100vh;
-  overflow-y: auto;
-  overflow-x: auto;
 }
 
 .album-show {
